<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lucas.treeandshrubfinder.MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="16dp"
        android:onClick="next" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="7dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="11dp"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/size"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <CheckBox
                android:id="@+id/cb_xs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0-3ft"
                />

            <CheckBox
                android:id="@+id/cb_s"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="3.5-6ft" />

            <CheckBox
                android:id="@+id/cb_m"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="6.5-12ft" />

            <CheckBox
                android:id="@+id/cb_l"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="12.5-20ft" />

            <CheckBox
                android:id="@+id/cb_xl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="20.5-30ft" />

            <CheckBox
                android:id="@+id/cb_xxl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="30+ft" />

            <Space
                android:id="@+id/s1"
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <TextView
                android:id="@+id/tv_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <CheckBox
                android:id="@+id/cb_deciduous"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Deciduous" />

            <CheckBox
                android:id="@+id/cb_evergreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Evergreen" />

            <Space
                android:id="@+id/s2"
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <TextView
                android:id="@+id/tv_privacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <CheckBox
                android:id="@+id/cb_y1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Yes" />

            <Space
                android:id="@+id/s3"
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <TextView
                android:id="@+id/tv_hedge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hedge"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <CheckBox
                android:id="@+id/cb_y3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Yes" />

            <Space
                android:id="@+id/s5"
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <TextView
                android:id="@+id/tv_vine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Vine"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <CheckBox
                android:id="@+id/cb_y4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Yes" />

            <Space
                android:id="@+id/s9"
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <TextView
                android:id="@+id/tv_shade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shade"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <CheckBox
                android:id="@+id/cb_y2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Yes" />

            <Space
                android:id="@+id/s4"
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <TextView
                android:id="@+id/tv_growth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Growth Rate"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <CheckBox
                android:id="@+id/cb_slow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Slow: Less than 1 ft/yr" />

            <CheckBox
                android:id="@+id/cb_mod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Moderate: 1-2 ft/yr" />

            <CheckBox
                android:id="@+id/cb_fast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Fast: 2+ ft/yr" />

            <Space
                android:id="@+id/s8"
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <TextView
                android:id="@+id/tv_flowering"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/flowering"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <CheckBox
                android:id="@+id/cb_none1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="None" />

            <CheckBox
                android:id="@+id/cb_orange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Orange" />

            <CheckBox
                android:id="@+id/cb_pink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Pink" />

            <CheckBox
                android:id="@+id/cb_red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Red" />

            <CheckBox
                android:id="@+id/cb_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="White" />

            <CheckBox
                android:id="@+id/cb_yellow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Yellow" />

            <Space
                android:id="@+id/s6"
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <TextView
                android:id="@+id/tv_fruitnuts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fruitnuts"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <CheckBox
                android:id="@+id/cb_none2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="None" />

            <CheckBox
                android:id="@+id/cb_apple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Apple" />

            <CheckBox
                android:id="@+id/cb_blackberry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Blackberry" />

            <CheckBox
                android:id="@+id/cb_blueberry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Blueberry" />

            <CheckBox
                android:id="@+id/cb_chokeberry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Chokeberry" />

            <CheckBox
                android:id="@+id/cb_elderberry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Elderberry" />

            <CheckBox
                android:id="@+id/cb_fig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Fig" />

            <CheckBox
                android:id="@+id/cb_gooseberry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Gooseberry" />

            <CheckBox
                android:id="@+id/cb_grape"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Grape" />

            <CheckBox
                android:id="@+id/cb_kiwi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Kiwi" />

            <CheckBox
                android:id="@+id/cb_lemon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lemon" />

            <CheckBox
                android:id="@+id/cb_lime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lime" />

            <CheckBox
                android:id="@+id/cb_peach"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Peach" />

            <CheckBox
                android:id="@+id/cb_pear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Pear" />

            <CheckBox
                android:id="@+id/cb_persimmon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Persimmon" />

            <CheckBox
                android:id="@+id/cb_plum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Plum" />

            <CheckBox
                android:id="@+id/cb_pomegranate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Pomegranate" />

            <CheckBox
                android:id="@+id/cb_raspberry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Raspberry" />

            <CheckBox
                android:id="@+id/cb_almond"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Almond" />

            <CheckBox
                android:id="@+id/cb_pecan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Pecan" />

            <CheckBox
                android:id="@+id/cb_walnut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Walnut" />

            <Space
                android:id="@+id/s7"
                android:layout_width="match_parent"
                android:layout_height="25dp" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
